[gd_scene load_steps=5 format=3 uid="uid://dwe8yba42h2ay"]

[ext_resource type="Script" path="res://ui/popups/treasure_chest_popup.gd" id="1_0rctc"]
[ext_resource type="Texture2D" uid="uid://bgmu14jk8bck8" path="res://assets/ui_v2.png" id="1_cvvm6"]
[ext_resource type="Texture2D" uid="uid://bmmjwi5ar1re5" path="res://assets/resources/experience.png" id="3_7tggu"]
[ext_resource type="Texture2D" uid="uid://bihykwaomvfup" path="res://assets/Surowce/kredyty_puste.png" id="3_kgipg"]

[node name="TreasureChestPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0rctc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("1_cvvm6")
region_rect = Rect2(0, 0, 50, 50)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Tytuł"
horizontal_alignment = 1

[node name="Desc" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "cały opis w pizdu"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CreditsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "500"
icon = ExtResource("3_kgipg")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "  or  "

[node name="ExperienceButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "500"
icon = ExtResource("3_7tggu")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="ApproveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Accept"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ExperienceButton" to="." method="_on_experience_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ApproveButton" to="." method="_on_approve_button_pressed"]
